--- a/files/main.css
+++ b/files/main.css
@@ -184,7 +184,7 @@ input.square:after, .CompareCheckbox:after {content: "\e876";font-family: 'Mater
 .table-box tbody tr td.cell2 {text-align: left;width: 50%;}
 .table-box .hide {display: none;}
 /*** Предзагрузчик ***/
-.preloader {position: absolute;top: 0;left: 0;width: 100%;height: 100%;background: #FFFFFF;z-index: 40;display: flex;align-items: center;justify-content: center;}
+.preloader {position: absolute;top: 0;left: 0;width: 100%;height: 100%;background: #FFFFFF;z-index: 98;display: flex;align-items: center;justify-content: center;}
 .preloader .loading {display: inline-block;width: 100px;height: 100px;}
 .preloader .loading:after {content: '';display: block;width: 100px;height: 100px;margin: 1px;border-radius: 50%;border: 5px solid #fff;border-color: #b30020 transparent #b30020 transparent;animation: loading 1.2s linear infinite;}
 .preloader.small .loading {display: inline-block;width: 50px;height: 50px;}
@@ -444,7 +444,7 @@ header .menu__icon i {padding: 0;font-size: 2rem;}
 #slideshow {position: relative;margin-top: 3rem;}
 .slider__title {width: calc(100% - 15rem);font-size: 2.25rem;padding: 0 8rem;height: 5.75rem;color: #fff;display: flex;align-items: center;background-image: url("{ASSETS_IMAGES_PATH}bg_slide_1.jpg?design=florist");background-repeat: no-repeat;background-position: 0 0;background-size: cover;}
 .slider__title:hover {color: rgba(255, 255, 255, 0.8);}
-.slider__item {position: relative;}
+.slider__item {position: relative;overflow: hidden;}
 .slider__content {position: absolute;bottom: 20%;width: 100%;display: flex;flex-wrap: wrap;}
 .slider__buttons {position: absolute;bottom: -0.75rem;right: 0;padding: 3rem 4rem;width: 18rem;height: 6.5rem;background-image: url("{ASSETS_IMAGES_PATH}bg_slide_2.png?design=florist");background-repeat: no-repeat;background-position: 0 0;background-size: cover;}
 .slider__button {font-size: 1.375rem;color: #fff;padding: 0 2rem;}
