--- a/files/main.css
+++ b/files/main.css
@@ -277,10 +277,10 @@ header .social__links span {display: none;}
 /** Контакты **/
 header .inner > .contacts {display: none;}
 header .contacts {width: calc(100% - 204px);display: flex;flex-wrap: wrap;align-items: center;}
-header .contacts .contacts__block {display: flex;flex-wrap: wrap;align-items: center;}
+header .contacts .contacts__block {width: calc(50% - 1rem);display: flex;flex-wrap: wrap;align-items: center;}
 header .contacts .contacts__block + .contacts__block {margin-left: 2rem;}
 header .contacts i {font-size: 2.25rem;}
-header .contacts span {font-size: 1.125rem;word-break: keep-all;white-space: nowrap;}
+header .contacts span {font-size: 1.125rem;word-break: keep-all;white-space: nowrap;display: block;text-overflow: ellipsis;overflow: hidden;}
 header .contacts label {display: block;color: #aca7b4;margin-top: 0.25rem;cursor: pointer;}
 header .contacts .contacts__block:hover label {color: #b30020;}
 header .contacts .icon {width: 4rem;}
@@ -338,11 +338,15 @@ header .menu__icon i {font-size: 2.25rem;color: #fff;}
 .search__reset {display: none;align-items: center;position: absolute;right: 1rem;top: 0;height: 100%;cursor: pointer;}
 .search__filled .search__reset {display: flex;}
 .search__loading .lds-ring {display: block;}
-.lds-ring {display: none;position: absolute;right: 1rem;width: 2rem;height: rem;}
+.lds-ring {display: none;position: absolute;right: 2rem;width: 2rem;height: 2rem;}
 .lds-ring div {display: block;position: absolute;width: 1rem;height: 1rem;margin: 0.375rem;border: 2px solid #b30020;border-color: #b30020 transparent transparent transparent;border-radius: 50%;animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;}
 .lds-ring div:nth-child(1) {animation-delay: -0.45s;}
 .lds-ring div:nth-child(2) {animation-delay: -0.3s;}
 .lds-ring div:nth-child(3) {animation-delay: -0.15s;}
+@keyframes lds-ring {
+0% {transform: rotate(0deg);}
+100% {transform: rotate(360deg);}
+}
 /** Поисковая выдача **/
 #search__result {display: none;position: absolute;width: 100%;max-height: 450px;overflow: hidden;margin-top: 5px;padding: 1rem;background: #fff;border: 1px solid #ccd2c2;z-index: 3;}
 #search__result .inner {display: -ms-flexbox;display: -webkit-flex;display: flex;-ms-flex-wrap: wrap;-webkit-flex-wrap: wrap;flex-wrap: wrap;-ms-flex-align: stretch;-webkit-align-items: stretch;-webkit-box-align: stretch;align-items: stretch;}
@@ -584,7 +588,7 @@ header .menu__icon i {padding: 0;font-size: 2rem;}
 
 /*** Описание на главной ***/
 #mainbody {background: #f4f6f8;padding: 3rem 0 0 0;margin-top: 0;}
-.mainbody__left {width: 50%;padding-bottom: 3rem;}
+.mainbody__left {width: 50%;padding-bottom: 3rem;flex-grow: 1;}
 .mainbody__right {width: 50%;}
 @media all and (max-width: 991px) {
 .mainbody__left {width: 60%;}
